Code Cleanup.